# dbt-databricks-kestra

./: pyproject.toml  requirements.txt
kestra-local/: docker-compose.yml
kestra-local/flows/: dbt_run.yml
