[project]
name = "dbt-databricks-kestra"
version = "0.1.0"
description = "Data engineering project with dbt and Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-databricks>=1.8.7",
    "dbt-spark>=1.8.0",
    "databricks-sdk>=0.17.0",
    "databricks-sql-connector>=3.1.2",
    "pandas>=2.0.3",
    "pyarrow>=14.0.2",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "python-slugify>=8.0.4",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.0.0", # Recommended for testing
]